fixed footer image being too short on wider screens

--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ h3{
 
 .bott-art {
     position: relative;
-    max-width: 100%;
+    width: 100%;
     bottom: 0;
     display: block;
 }
