--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -99,7 +99,7 @@ header {
 
 .bott-art {
     position: relative;
-    max-width: 100%;
+    width: 100%;
     bottom: 0;
     display: block;
 }
