--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -88,7 +88,7 @@ p {
 
  .bott-art {
     position: relative;
-    max-width: 100%;
+    width: 100%;
     bottom: 0;
     display: block;
 }
